--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,12 @@
-.vercel
-*.log
-*.pyc
-__pycache__
+# Python-generated files
+__pycache__/
+*.py[oc]
+build/
+dist/
+wheels/
+*.egg-info
 
-# Environments 
-.env 
-.venv 
-env/ 
-venv/ 
-ENV/ 
-env.bak/ 
-venv.bak/ 
+# Virtual environments
+.venv
+.env
+.vercel
